# emoji-story-builder

./: .cursorrules  .gitignore  agent.md  pyproject.toml  readme.md  requirements.txt
cline_docs/: activeContext.md  productContext.md  progress.md  readme.md  systemPatterns.md  techContext.md
data/: sessions.json
logs/: error.log.2025-01-31  error.log.2025-02-06
src/: __init__.py  app.py  data_store.py  emoji_manager.py  logger.py  ollama_client.py  streamlitemojis.txt  test_logger.py
src/data/: sessions.json
src/emoji_story_builder/: __init__.py
src/logs/: error.log.2025-01-31
src/tests/: test_app_logic.py  test_browser_logging.py  test_ollama_client.py  test_ollama_integration.py  test_ui_logic.py
