[project]
name = "emoji-story-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pleabargain", email = "dennisgdaniels@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "filelock>=3.20.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.52.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
